--- a/CloudCore.html
+++ b/CloudCore.html
@@ -63,10 +63,7 @@
             margin-left: 10px;
             -webkit-appearance: none;
             width: 95%;
-
-
         }
-
     </style>
 </head>
 
@@ -308,7 +305,9 @@
                 // get the value of the oscillator type
                 const oscillator_type = document.querySelector('select').value;
                 oscillator.type = oscillator_type;
-                oscillator.start();
+                setTimeout(function () {
+                    oscillator.start();
+                }, 0);
                 // get the value of the volume slider
                 const volume = document.querySelector('.volume-slider').value;
                 gainNode.gain.value = volume;
@@ -348,7 +347,7 @@
             spacer.classList.add('spacer');
             div.appendChild(spacer);
 
-            
+
 
             // LOOP BUTTON
             loopButton.addEventListener('click', () => {
@@ -400,18 +399,6 @@
 
         function templateTwo() {
             var div = document.createElement('div');
-            // list all the midi devices that are connected in a div
-            // create a dropdown menu
-            //var midiDevices = document.createElement('select');
-            //midiDevices.classList.add('midi-devices');
-            //div.appendChild(midiDevices);
-
-            // create a button that will run a function that lists all the midi devices
-            //var midiButton = document.createElement('button');
-            //midiButton.classList.add('midi-button');
-            //midiButton.innerHTML = 'List MIDI Devices';
-            //midiButton.addEventListener('click', listMidiDevices);
-            //div.appendChild(midiButton);
 
             // create a spacer div
             var spacer = document.createElement('div');
@@ -486,24 +473,7 @@
             triangle.innerHTML = 'triangle';
             oscType.appendChild(triangle);
 
-            // create the function that lists all the midi devices and appends them to the div
-            //function listMidiDevices() {
-            //    // clear the div
-            //    midiDevices.innerHTML = '';
-            //    // get the midi devices
-            //    navigator.requestMIDIAccess().then(function (midiAccess) {
-            //        // get the inputs
-            //        var inputs = midiAccess.inputs;
-            //        // loop through the inputs
-            //        for (var input of inputs.values()) {
-            //            // create a div for each input
-            //            var inputOption = document.createElement('option');
-            //            inputOption.classList.add('input-option');
-            //            inputOption.innerHTML = input.name;
-            //            midiDevices.appendChild(inputOption);
-            //        }
-            //    });
-            //}
+
 
             navigator.requestMIDIAccess().then(function (midiAccess) {
                 // get the inputs
@@ -545,7 +515,9 @@
                 // set the gain node gain
                 gainNode.gain.value = velocity / 127;
                 // start the oscillator
-                oscillator.start();
+                setTimeout(function () {
+                    oscillator.start();
+                }, 0);
                 // decrease the gain node game over time
                 gainNode.gain.exponentialRampToValueAtTime(0.001, audioContext.currentTime + noteLengthSlider.value);
                 // stop the oscillator after the note length
@@ -554,7 +526,7 @@
                 }, noteLengthSlider.value * 1000);
             }
 
-            function noteToFrequency (note) {
+            function noteToFrequency(note) {
                 return 440 * Math.pow(2, (note - 69) / 12);
             }
 
@@ -571,22 +543,219 @@
 
         function templateThree() {
             var div = document.createElement('div');
-            div.style.height = '50px';
-            div.style.width = '50px';
-            div.style.backgroundColor = 'blue';
-            div.style.margin = '10px';
+            // list all the midi devices that are connected in a div
+            // create a dropdown menu
+            var midiDevices = document.createElement('select');
+            midiDevices.classList.add('midi-devices');
+            div.appendChild(midiDevices);
+
+            // create a button that will run a function that lists all the midi devices
+            var midiButton = document.createElement('button');
+            midiButton.classList.add('midi-button');
+            midiButton.innerHTML = 'List MIDI Devices';
+            midiButton.addEventListener('click', listMidiDevices);
+            div.appendChild(midiButton);
+
+            // create the function that lists all the midi devices and appends them to the div
+            function listMidiDevices() {
+                // clear the div
+                midiDevices.innerHTML = '';
+                // get the midi devices
+                navigator.requestMIDIAccess().then(function (midiAccess) {
+                    // get the inputs
+                    var inputs = midiAccess.inputs;
+                    // loop through the inputs
+                    for (var input of inputs.values()) {
+                        // create a div for each input
+                        var inputOption = document.createElement('option');
+                        inputOption.classList.add('input-option');
+                        inputOption.innerHTML = input.name;
+                        midiDevices.appendChild(inputOption);
+                    }
+                });
+            }
+            div.style.height = '100px';
+            div.style.width = '400px';
+            div.style.margin = '0 auto';
+            div.style.marginTop = '10px';
+            div.style.border = '1px solid black';
+            div.style.backgroundColor = '#e6b0ff';
+            div.style.borderRadius = '5px';
             return div;
         }
+
         function templateFour() {
             var div = document.createElement('div');
-            div.style.height = '50px';
-            div.style.width = '50px';
-            div.style.backgroundColor = 'green';
-            div.style.margin = '10px';
+            // create an array of elements to create
+            const elements = [
+                { type: 'div', class: 'spacer', style: 'height: 10px;' },
+                { type: 'input', class: 'notes-input', type: 'text', placeholder: 'Enter notes here...' },
+                { type: 'div', class: 'spacer', style: 'height: 10px;' },
+                { type: 'label', class: 'volume-label', text: 'Volume:   ' },
+                { type: 'input', class: 'volume-slider', type: 'range', min: '0', max: '1', step: '0.01', value: '0.5', style: 'background: #e6b0ff', },
+                { type: 'label', class: 'volume-label', text: '' },
+                { type: 'div', class: 'spacer', style: 'height: 10px;' },
+                { type: 'label', class: 'bpm-label', text: 'BPM:   ' },
+                { type: 'input', class: 'bpm-slider', type: 'range', min: '1', max: '200', step: '1', value: '50' },
+                { type: 'label', class: 'bpm-label', text: '' }
+            ];
+
+            // loop through the elements array
+            for (const element of elements) {
+                // create the element
+                const newElement = document.createElement(element.type);
+                // set the class
+                newElement.classList.add(element.class);
+                // set the style
+                if (element.style) {
+                    newElement.setAttribute('style', element.style);
+                }
+                // set the text or options
+                if (element.text) {
+                    newElement.innerHTML = element.text;
+                }
+                // set the type and value
+                if (element.type === 'input') {
+                    newElement.setAttribute('type', element.type);
+                    newElement.setAttribute('value', element.value);
+                    newElement.setAttribute('placeholder', element.placeholder);
+                    newElement.setAttribute('min', element.min);
+                    newElement.setAttribute('max', element.max);
+                    newElement.setAttribute('step', element.step);
+                    // add the event listener
+                    if (element.class === 'volume-slider' || element.class === 'bpm-slider') {
+                        newElement.addEventListener('input', function () {
+                            var label = document.querySelector('.${ element.class } + .${ element.class }');
+                            label.innerHTML = newElement.value;
+                        });
+                    }
+                }
+                // append the element to the div
+                div.appendChild(newElement);
+            }
+
+            // dictionary of notes and their frequencies
+            const notes = {
+                'C': 261.63,
+                'C#': 277.18,
+                'D': 293.66,
+                'D#': 311.13,
+                'E': 329.63,
+                'F': 349.23,
+                'F#': 369.99,
+                'G': 392.00,
+                'G#': 415.30,
+                'A': 440.00,
+                'A#': 466.16,
+                'B': 493.88
+            };
+
+            // set the note length to 0.25 seconds by default
+            let note_length = 1;
+
+            //create a function that plays a note for a certain note_length THEN stops the note
+            function play(x) {
+                const audioCtx = new AudioContext();
+                const oscillator = audioCtx.createOscillator();
+                const gainNode = audioCtx.createGain();
+                oscillator.frequency.value = notes[x];
+                oscillator.connect(gainNode);
+                gainNode.connect(audioCtx.destination);
+                // get the value of the oscillator type
+                const oscillator_type = document.querySelector('select').value;
+                oscillator.type = oscillator_type;
+                setTimeout(function () {
+                    oscillator.start();
+                }, 0);
+                // get the value of the volume slider
+                const volume = document.querySelector('.volume-slider').value;
+                gainNode.gain.value = volume;
+
+                setTimeout(() => {
+                    oscillator.stop();
+                }, note_length * 1000);
+            }
+
+            // PLAY BUTTON
+            playButton.addEventListener('click', () => {
+                // get the value of the input field
+                const input = document.querySelector('input').value;
+                // split the input into an array of notes
+                const notes = input.split(' ');
+                // get the value of the bpm slider
+                const bpm = document.querySelector('.bpm-slider').value;
+                // calculate the note length
+                note_length = 60 / bpm;
+                // loop through the notes array and play each note ONE AT A TIME
+                notes.forEach((note, index) => {
+                    setTimeout(() => {
+                        play(note);
+                    }, index * note_length * 1000);
+                });
+            });
+
+            // STOP BUTTON
+            stopButton.addEventListener('click', () => {
+                // IF THERE IS ANY AUDIO PLAYING STOP IT
+                const audioCtx = new AudioContext();
+                audioCtx.close();
+            });
+
+            // create a spacer div
+            var spacer = document.createElement('div');
+            spacer.classList.add('spacer');
+            div.appendChild(spacer);
+
+
+
+            // LOOP BUTTON
+            loopButton.addEventListener('click', () => {
+                // do what the play button does but in a while loop that runs forever until the stop button is pressed
+                const input = document.querySelector('input').value;
+                const notes = input.split(' ');
+                const bpm = document.querySelector('.bpm-slider').value;
+                note_length = 60 / bpm;
+                // create a variable to keep track of the index
+                let index = 0;
+                // create a variable to keep track of the loop
+                let loop = true;
+                // create a variable to keep track of the interval
+                let interval;
+                // create a function that plays the notes
+                function playNotes() {
+                    play(notes[index]);
+                    index++;
+                    if (index === notes.length) {
+                        index = 0;
+                    }
+                }
+                // create a function that starts the loop
+                function startLoop() {
+                    interval = setInterval(playNotes, note_length * 1000);
+                }
+                // create a function that stops the loop
+                function stopLoop() {
+                    clearInterval(interval);
+                }
+                // start the loop
+                startLoop();
+                // stop the loop when the stop button is pressed
+                stopButton.addEventListener('click', () => {
+                    stopLoop();
+                });
+            });
+
+            // Div styling
+            div.style.height = '250px';
+            div.style.width = '400px';
+            div.style.margin = '0 auto';
+            div.style.marginTop = '10px';
+            div.style.border = '1px solid black';
+            div.style.backgroundColor = '#ffc6b0';
+            div.style.borderRadius = '5px';
             return div;
         }
     </script>
-    <!--END MODULES-->
 </body>
 
 </html>
